# QuickDataFlow

./: .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  build.sh  codecov.yml  example.cpp  get_code_cov.sh  main.cpp  setup.cfg  setup.py  shm_message.py  sonar-project.properties  test.cpp
.github/workflows/: cmake.yml
QuickDataFlow/: __init__.py  shm_message.py
docs_sphinx/: conf.py  doxy.config  index.rst
docs_sphinx/api/: cpp_doxygen_sphinx.rst  index.rst
examples/: example.cpp  img_receiver.cpp  img_receiver.py  img_sender.cpp  video_sender.cpp
include/: shm_message.hpp
src/: shm_message.cpp
tests/: test.cpp
