[metadata]
author = ilyajob05
url = https://github.com/ilyajob05/QuickDataFlow
#download_url =
name = QuickDataFlow
version = 2.1.0
description = QuickDataFlow library is designed for messaging between programs written in c++ and python
long_description = file: README.md, LICENSE.txt
keywords = DataFlow, cpp, c++, IPC, shared memory
license = MIT
platforms = x86_x64
classifiers =
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Other Environment,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License    Operating System :: OS Independent,
    Topic :: Software Development :: Libraries :: Python Modules,
    Operating System :: POSIX :: Linux
    Operating System :: Unix

[options]
packages = find_namespace:
py_modules = QuickDataFlow
zip_safe = False
include_package_data = False
platforms = linux

#install_requires =
#    pillow

[options.package_data]
* = *.txt, *.cpp, *.hpp, *.so, *.py

[options.packages.find]
where=.
include=QuickDataFlow*

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
