[metadata]
author = ilyajob05
url = https://github.com/ilyajob05/QuickDataFlow
#download_url =
name = QuickDataFlow
version = 2.1.2
description = QuickDataFlow library is designed for messaging between programs written in c++ and python
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
keywords = Data Flow, cpp, c++, IPC, shared memory, DAG, cross language, between C++ and python
license = MIT
platforms = manylinux2014_x86_64
classifiers =
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: POSIX :: Linux
    Operating System :: Unix

[options]
packages = find:
;package_dir =
;    = QuickDataFlow
py_modules = __init__, shm_message
zip_safe = False
include_package_data = True
platforms = linux

;[options.packages.find]
;where = QuickDataFlow
;include = QuickDataFlow*

#install_requires =
#    pillow

[options.package_data]
* = *.txt, *.cpp, *.hpp, *.so, *.py, *.md

[tool.distutils.bdist_wheel]
universal = True

[build-system]
requires = setuptools, wheel
build-backend = setuptools.build_meta
